checkpoint (finishing the extension cards)

--- a/src/extensions/sulaiman-default-dark/styles/card.css
+++ b/src/extensions/sulaiman-default-dark/styles/card.css
@@ -180,3 +180,9 @@ body > .cardDisabled
   cursor: default;
   pointer-events: none;
 }
+
+.cardFastForward
+{
+  transition: none;
+  animation: none;
+}
