--- a/src/extensions/sulaiman-default-dark/styles/searchBar.css
+++ b/src/extensions/sulaiman-default-dark/styles/searchBar.css
@@ -1,4 +1,4 @@
-#searchBar
+.searchBar, .searchBarPreview
 {
   z-index: 1;
   outline: none;
@@ -20,12 +20,20 @@
   margin: 0px;
 }
 
-#searchBar::placeholder
+.searchBarPreview
+{
+  display: flex;
+  align-items: center;
+  position: absolute;
+  background-color: red;
+}
+
+.searchBar::placeholder
 {
   color: var(--color-lighter);
 }
 
-#autoComplete
+.suggestions
 {
   --item-height: (25px + 2.5vh + 0.5vw);
 
@@ -34,20 +42,25 @@
 
   width: 100vw;
   height: auto;
-  max-height: calc(var(--item-height) * 5);
+  max-height: calc(var(--item-height) * 3);
+  overflow: hidden;
 }
 
-.autoCompleteItem
+.suggestionsItem
 {
   display: flex;
   align-items: center;
 
   color: var(--color-lighter);
 
+  outline: 1px red solid;
+  outline-offset:  -1px;
+
   width: 100vw;
   height: calc(var(--item-height));
 
   white-space: pre-wrap;
+  user-select: none;
 
   font-family: Oxygen;
   font-size: calc(15px + 1.5vh + 0.5vw);
@@ -56,7 +69,7 @@
   padding: 0px 10px 0px 10px;
 }
 
-.autoCompleteItemHighlighter
+.suggestionsItemHighlighter
 {
   color: #FFFFFF;
 }
