--- a/src/extensions/sulaiman-default-dark/styles/searchBar.css
+++ b/src/extensions/sulaiman-default-dark/styles/searchBar.css
@@ -1,31 +1,28 @@
 .searchBar, .searchBarPreview
 {
+  --searchBar-height: (25px + 3vh + 0.5vw);
+
   z-index: 1;
   outline: none;
-  overflow: hidden;
-  position: sticky;
-  background-color: var(--color-medium);
   color: #FFFFFF;
+  background-color: var(--color-medium);
+  
+  position: sticky;
   top: 0;
   left: 0;
   width: calc(100vw - 20px);
-  height: calc(30px + 3vh + 0.5vw);
+  height: calc(var(--searchBar-height));
+
   font-family: Oxygen;
   font-size: calc(15px + 1.5vh + 0.5vw);
   font-weight: 400;
+
   user-select: none;
   white-space: nowrap;
-  border: 0px;
-  padding: 10px 10px 10px 10px;
-  margin: 0px;
-}
 
-.searchBarPreview
-{
-  display: flex;
-  align-items: center;
-  position: absolute;
-  background-color: red;
+  border: 0px;
+  padding: 10px;
+  margin: 0px;
 }
 
 .searchBar::placeholder
@@ -33,17 +30,39 @@
   color: var(--color-lighter);
 }
 
-.suggestions
+.searchBarPreview
 {
-  --item-height: (25px + 2.5vh + 0.5vw);
+  display: flex;
+  align-items: center;
+
+  background-color: red;
 
   position: absolute;
+}
+
+.suggestions
+{
+  --max-suggestions-count: 3;
+  --item-height: (25px + 2.5vh + 0.5vw);
+
+  z-index: -1;
+  overflow: hidden;
+
   background-color: var(--color-medium);
 
+  position: sticky;
+  top: calc(var(--searchBar-height) + 20px);
+  left: 0;
+
   width: 100vw;
-  height: auto;
-  max-height: calc(var(--item-height) * 3);
-  overflow: hidden;
+  max-height: calc(var(--item-height) * var(--suggestions-count));
+
+  transition: max-height 0.1s ease-in-out;
+}
+
+.suggestionsActive
+{
+  /* max-height: 0; */
 }
 
 .suggestionsItem
@@ -53,9 +72,7 @@
 
   color: var(--color-lighter);
 
-  outline: 1px red solid;
-  outline-offset:  -1px;
-
+  position: relative;
   width: 100vw;
   height: calc(var(--item-height));
 
@@ -63,13 +80,18 @@
   user-select: none;
 
   font-family: Oxygen;
-  font-size: calc(15px + 1.5vh + 0.5vw);
+  font-size: calc(14px + 0.8vh + 0.5vw);
   font-weight: 400;
 
-  padding: 0px 10px 0px 10px;
+  padding: 0px 10px;
 }
 
-.suggestionsItemHighlighter
+.suggestionsItemHighlightedText
 {
   color: #FFFFFF;
+}
+
+.suggestionsItemSelected
+{
+  background-color: var(--color-light);
 }
