fix the sorting of written letters inside suggestion elements

--- a/src/extensions/sulaiman-default-dark/styles/search.css
+++ b/src/extensions/sulaiman-default-dark/styles/search.css
@@ -74,9 +74,10 @@ html
   padding: 0px 10px;
 }
 
-.suggestionsItemWrittenText
+.suggestionsItem > mark
 {
   color: #FFFFFF;
+  background-color: transparent;
 }
 
 .suggestionsItemSelected
