--- a/src/extensions/sulaiman-default-dark/styles/search.css
+++ b/src/extensions/sulaiman-default-dark/styles/search.css
@@ -1,9 +1,7 @@
 html
 {
   --searchBar-height: (25px + 3vh + 0.5vw);
-  --suggestion-item-height: (25px + 2.5vh + 0.5vw);
-
-  --max-suggestions-count: 3;
+  --suggestion-item-height: (30px + 1.5vh + 0.5vw);
 }
 
 .searchBar
@@ -50,19 +48,18 @@ html
 
 .suggestionsActive
 {
-  max-height: calc(var(--suggestion-item-height) * var(--suggestions-count));
+  max-height: calc(var(--suggestion-item-height) * 3);
 }
 
 .suggestionsItem
 {
   display: flex;
-  align-items: center;
 
   color: var(--color-text);
 
   position: relative;
-  width: 100vw;
-  height: calc(var(--suggestion-item-height));
+  width: calc(100vw - 20px);
+  height: auto;
 
   user-select: none;
   white-space: pre;
@@ -71,7 +68,7 @@ html
   font-size: calc(12px + 0.8vh + 0.5vw);;
   font-weight: 400;
 
-  padding: 0px 10px;
+  padding: 8px 10px;
 }
 
 .suggestionsItem mark
@@ -80,12 +77,12 @@ html
   background-color: transparent;
 }
 
-.suggestionsItem > div:first-child
+.suggestionsItem > *:first-child
 {
   text-transform: lowercase;
 }
 
-.suggestionsItem > div:first-child::first-letter
+.suggestionsItem > *:first-child::first-letter
 {
   text-transform: uppercase;
 }
