--- a/src/extensions/sulaiman-default-dark/styles/body.css
+++ b/src/extensions/sulaiman-default-dark/styles/body.css
@@ -12,10 +12,14 @@ html
 body
 {
   background-color: var(--color-background);
+  
   width: 100%;
   height: 100%;
+
   overflow-x: hidden;
   overflow-y: scroll;
+
+  margin: 0;
 }
 
 ::-webkit-scrollbar
