fixed some theme issues, added a toggleClass to card api, added a hidden card toggle to card api, moved disabled out of card types and made it a toggle as well

--- a/src/extensions/sulaiman-default-dark/styles/card-types.css
+++ b/src/extensions/sulaiman-default-dark/styles/card-types.css
@@ -133,9 +133,7 @@
 
 /* Disabled */
 
-/* if the card is child, not show the progress unless the parent is hovered on */
-
-.cardDisabled
+.card.cardDisabled
 {
   cursor: default;
   pointer-events: none;
