--- a/src/index.pug
+++ b/src/index.pug
@@ -9,7 +9,7 @@ html(lang='en')
 
   body
     input.searchBar(type='text')
-    .suggestions
+    .searchItemsList
 
   script.
     window.onerror = function(message, url, line, column, error)
